04-built-in-resource-types/Ingress/Service.nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort #Fro GKE load balancer this has to be a NodePort
  selector:
    app: nginx-pod-label
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
