04-built-in-resource-types/Ingress/Ingress.minimal-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-gke
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: "ingress-example-gke.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-nodeport
                port:
                  number: 80
